<resources>
    <string name="app_name">UCS Tgo Vote (Admin)</string>
    <string name="action_settings">Settings</string>

    <string name="app_permission_error">Camera permission is disable. So, please open camera permission.</string>
    <string name="tv_ok">OK</string>
    <string name="sign_in_label">Please sign in</string>
    <string name="email_hint">Email address</string>
    <string name="password_hint">Password</string>
    <string name="show_password">Show Password</string>
    <string name="sign_in">Sign in</string>

    <string name="connection_error">Connection error. Please try again.</string>
    <string name="try_again">Try Again</string>
    <string name="voting_url">https://ucstaungoo.app/voting</string>
    <string name="developer">Kyaw Htut</string>
    <string name="libraries">Libraries</string>
    <string name="report_bugs">Report Bugs</string>

    <string-array name="library_list">
        <item>OkHttp</item>
        <item>Retrofit</item>
        <item>Gson Converter</item>
        <item>RxJava: Reactive Extensions for the JVM</item>
        <item>RxAndroid: Reactive Extensions for Android</item>
        <item>Butter Knife</item>
        <item>Timber</item>
        <item>Custom Activity On Crash library</item>
        <item>Bar Code Scanner</item>
    </string-array>
</resources>
